--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,169 +1,40 @@
-<div class="jumbotron">
-  <h1>Search</h1>
+<div class="row">
+  <div class="col-md-12">
+    <div class="well">
 
-  <div class="inputs">
-    <div class="form-group label-static is-empty">
-      <label for="query" class="control-label">Query</label>
-      <input type="text" class="form-control" id="query" placeholder="Type anything. e.g. John Snow or O+ or 0171">
+      <h1>Search</h1>
+
+      <div class="inputs">
+        <div class="form-group label-static is-empty">
+          <label for="query" class="control-label">Query</label>
+          <input type="text" class="form-control" id="query" placeholder="Type anything. e.g. John Snow or O+ or 0171">
+        </div>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="jumbotron">
-  <div class="row">
-    <div class="col-lg-6 col-sm-6">
-      <div class="card hovercard">
-        <div class="cardheader">
-        </div>
-        <div class="avatar">
-          <img alt="" src="http://placehold.it/100x100">
-        </div>
-        <div class="info">
-          <div class="title">
-            <a target="_blank" href="http://scripteden.com/">Script Eden</a>
-          </div>
-          <div class="desc">Passionate designer</div>
-          <div class="desc">Curious developer</div>
-          <div class="desc">Tech geek</div>
-        </div>
-        <div class="bottom">
-          <a class="btn btn-primary btn-twitter btn-sm" href="#">
-            <i class="fa fa-twitter"></i>
-          </a>
-          <a class="btn btn-danger btn-sm" rel="publisher"
-             href="#">
-            <i class="fa fa-google-plus"></i>
-          </a>
-          <a class="btn btn-primary btn-sm" rel="publisher"
-             href="#">
-            <i class="fa fa-facebook"></i>
-          </a>
-        </div>
-      </div>
-    </div>
+  <div class="col-md-12">
+    <div class="well">
 
-    <div class="col-lg-6 col-sm-6">
-      <div class="card hovercard">
-        <div class="cardheader">
-        </div>
-        <div class="avatar">
-          <img alt="" src="http://placehold.it/100x100">
-        </div>
-        <div class="info">
-          <div class="title">
-            <a target="_blank" href="http://scripteden.com/">Script Eden</a>
-          </div>
-          <div class="desc">Passionate designer</div>
-          <div class="desc">Curious developer</div>
-          <div class="desc">Tech geek</div>
-        </div>
-        <div class="bottom">
-          <a class="btn btn-primary btn-twitter btn-sm" href="#">
-            <i class="fa fa-twitter"></i>
-          </a>
-          <a class="btn btn-danger btn-sm" rel="publisher"
-             href="#">
-            <i class="fa fa-google-plus"></i>
-          </a>
-          <a class="btn btn-primary btn-sm" rel="publisher"
-             href="#">
-            <i class="fa fa-facebook"></i>
-          </a>
-        </div>
-      </div>
-    </div>
+      <h1>Results <a href="<%= new_person_path %>" class="btn btn-xs btn-raised btn-success">Add<div class="ripple-container"></div></a></h1>
 
-    <div class="col-lg-6 col-sm-6">
-      <div class="card hovercard">
-        <div class="cardheader">
-        </div>
-        <div class="avatar">
-          <img alt="" src="http://placehold.it/100x100">
-        </div>
-        <div class="info">
-          <div class="title">
-            <a target="_blank" href="http://scripteden.com/">Script Eden</a>
+      <% if @people.present? %>
+          <div id="list_people" class="list-group">
+            <% @people.each do |person| %>
+                <%= render partial: 'people/person', object: person %>
+            <% end %>
           </div>
-          <div class="desc">Passionate designer</div>
-          <div class="desc">Curious developer</div>
-          <div class="desc">Tech geek</div>
-        </div>
-        <div class="bottom">
-          <a class="btn btn-primary btn-twitter btn-sm" href="#">
-            <i class="fa fa-twitter"></i>
-          </a>
-          <a class="btn btn-danger btn-sm" rel="publisher"
-             href="#">
-            <i class="fa fa-google-plus"></i>
-          </a>
-          <a class="btn btn-primary btn-sm" rel="publisher"
-             href="#">
-            <i class="fa fa-facebook"></i>
-          </a>
-        </div>
-      </div>
-    </div>
 
-    <div class="col-lg-6 col-sm-6">
-      <div class="card hovercard">
-        <div class="cardheader">
-        </div>
-        <div class="avatar">
-          <img alt="" src="http://placehold.it/100x100">
-        </div>
-        <div class="info">
-          <div class="title">
-            <a target="_blank" href="http://scripteden.com/">Script Eden</a>
+          <div id="list_people_pagination" class="text-center">
+            <%= paginate @people, remote: true, theme: 'twitter-bootstrap-3', pagination_class: 'pagination-small pagination-centered' %>
           </div>
-          <div class="desc">Passionate designer</div>
-          <div class="desc">Curious developer</div>
-          <div class="desc">Tech geek</div>
-        </div>
-        <div class="bottom">
-          <a class="btn btn-primary btn-twitter btn-sm" href="#">
-            <i class="fa fa-twitter"></i>
-          </a>
-          <a class="btn btn-danger btn-sm" rel="publisher"
-             href="#">
-            <i class="fa fa-google-plus"></i>
-          </a>
-          <a class="btn btn-primary btn-sm" rel="publisher"
-             href="#">
-            <i class="fa fa-facebook"></i>
-          </a>
-        </div>
-      </div>
-    </div>
+      <% else %>
+          <div class="alert alert-info">
+            There are no people <%= params[:query].present? ? ' found yet based on your search' : ' yet ' %> <i class="material-icons">face</i>
+            <a href="<%= new_person_path %>" class="btn btn-raised btn-success">Add<div class="ripple-container"></div></a> yourself now!
+          </div>
 
-    <div class="col-lg-6 col-sm-6">
-      <div class="card hovercard">
-        <div class="cardheader">
-        </div>
-        <div class="avatar">
-          <img alt="" src="http://placehold.it/100x100">
-        </div>
-        <div class="info">
-          <div class="title">
-            <a target="_blank" href="http://scripteden.com/">Script Eden</a>
-          </div>
-          <div class="desc">Passionate designer</div>
-          <div class="desc">Curious developer</div>
-          <div class="desc">Tech geek</div>
-        </div>
-        <div class="bottom">
-          <a class="btn btn-primary btn-twitter btn-sm" href="#">
-            <i class="fa fa-twitter"></i>
-          </a>
-          <a class="btn btn-danger btn-sm" rel="publisher"
-             href="#">
-            <i class="fa fa-google-plus"></i>
-          </a>
-          <a class="btn btn-primary btn-sm" rel="publisher"
-             href="#">
-            <i class="fa fa-facebook"></i>
-          </a>
-        </div>
-      </div>
+      <% end %>
     </div>
   </div>
 </div>
