--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require ie10-viewport-bug-workaround
  *= require jumbotron-narrow
  *= require profile_card
+ *= require formtastic-bootstrap
  *= require_tree .
  *= require_self
  */
