--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
   </script>
 </head>
 <body>
+<div id="loading_spinner" class="loading hidden">Loading&#8230;</div>
 <div class="container">
   <div class="header clearfix">
     <nav>
