--- a/app/views/pages/welcome.js.erb
+++ b/app/views/pages/welcome.js.erb
@@ -1,6 +1,2 @@
-$('#list_people').fadeOut("slow").empty();
-<% @people.each do |person| %>
-    $('#list_people').append('<%= j render(partial: 'people/person', object: person) %>').hide().show('slow');
-<% end %>
-$('#list_people_pagination').empty();
-$('#list_people_pagination').html('<%= j paginate(@people, remote: true, theme: 'twitter-bootstrap-3', pagination_class: 'pagination-small pagination-centered') %>');
+$('#results_people').empty();
+$('#results_people').html('<%= j render partial: 'pages/results', object: @people %>');
