--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -3,38 +3,19 @@
     <div class="well">
 
       <h1>Search</h1>
-
-      <div class="inputs">
-        <div class="form-group label-static is-empty">
-          <label for="query" class="control-label">Query</label>
-          <input type="text" class="form-control" id="query" placeholder="Type anything. e.g. John Snow or O+ or 0171">
+      <form method="get" action="<%= pages_welcome_path %>">
+        <div class="inputs">
+          <div class="form-group label-static is-empty">
+            <label for="query" class="control-label">Query</label>
+            <input type="text" value="<%= params[:query] %>" class="form-control" id="query" name="query" placeholder="Type anything. e.g. John Snow or O+ or 0171">
+          </div>
         </div>
-      </div>
+      </form>
     </div>
   </div>
 
-  <div class="col-md-12">
-    <div class="well">
-
-      <h1>Results <a href="<%= new_person_path %>" class="btn btn-xs btn-raised btn-success">Add<div class="ripple-container"></div></a></h1>
-
-      <% if @people.present? %>
-          <div id="list_people" class="list-group">
-            <% @people.each do |person| %>
-                <%= render partial: 'people/person', object: person %>
-            <% end %>
-          </div>
-
-          <div id="list_people_pagination" class="text-center">
-            <%= paginate @people, remote: true, theme: 'twitter-bootstrap-3', pagination_class: 'pagination-small pagination-centered' %>
-          </div>
-      <% else %>
-          <div class="alert alert-info">
-            There are no people <%= params[:query].present? ? ' found yet based on your search' : ' yet ' %> <i class="material-icons">face</i>
-            <a href="<%= new_person_path %>" class="btn btn-raised btn-success">Add<div class="ripple-container"></div></a> yourself now!
-          </div>
-
-      <% end %>
-    </div>
+  <div id="results_people" class="col-md-12">
+    <%= render partial: 'pages/results', object: @people %>
   </div>
 </div>
+
