feat(): Admin panel

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
  *= require profile_card
  *= require formtastic-bootstrap
  *= require spinner
- *= require_tree .
+ *= require people
+ *= require scaffolds
  *= require_self
  */
